feat: add exercise-3

--- a/exercise-3/pom.xml
+++ b/exercise-3/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>ifrs.edu.com</groupId>
-	<artifactId>exercise-2</artifactId>
+	<artifactId>exercise-3</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>exercise-2</name>
-	<description>Exercise for distributed objects class</description>
+	<name>exercise-3</name>
+	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -32,9 +32,14 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
